--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.6",
     "expo": "~37.0.3",
+    "expo-file-system": "~8.1.0",
     "expo-font": "^8.1.0",
     "expo-image-picker": "~8.1.0",
     "expo-permissions": "~8.1.0",
+    "expo-sqlite": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
